--- a/src/Home.css
+++ b/src/Home.css
@@ -10,7 +10,7 @@ body, html {
 .home {
     min-height: 100vh;
     width: 100vw;
-    background-image: url('public/portfolio-background.jpg');
+    background-image: url('./assets/portfolio-background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
